Fix alignment

--- a/packages/web/styles/Sidebar.module.scss
+++ b/packages/web/styles/Sidebar.module.scss
@@ -9,7 +9,6 @@
   padding-left: 3.5em;
   display: flex;
   flex-direction: column;
-  //justify-content: center;
-  align-content: center;
+  align-items: center;
   text-align: center;
 }
